--- a/app/.prettierrc
+++ b/app/.prettierrc
@@ -1,4 +1,32 @@
 {
+  "semi": false,
+  "printWidth": 110,
+  "quoteProps": "consistent",
   "singleQuote": true,
-  "trailingComma": "all"
+  "jsxSingleQuote": true,
+  "trailingComma": "none",
+  "bracketSameLine": true,
+  "singleAttributePerLine": true,
+  "plugins": ["@ianvs/prettier-plugin-sort-imports"],
+  "importOrder": [
+    "<BUILTIN_MODULES>",
+    "",
+    "^@nestjs/(.*)$",
+    "",
+    "<THIRD_PARTY_MODULES>",
+    "",
+    "^@/type/(.*)$",
+    "",
+    "^@/decorator/(.*)$",
+    "",
+    "^@/module/(.*)$",
+    "",
+    "^@/helper/(.*)$",
+    "",
+    "^./(.*)$",
+    "",
+    "^../(.*)$"
+  ],
+  "importOrderParserPlugins": ["typescript", "decorators-legacy"],
+  "importOrderTypeScriptVersion": "5.2.2"
 }
