--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.4.5",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "fastify": "^5.0.0",
     "mongoose": "^8.7.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
